# project

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/audit/: __init__.py  service.py
backend/app/auth/: dependencies.py  exceptions.py  jwks.py  jwt_validator.py  models.py  router.py
backend/app/cache/: redis_cache.py
backend/app/chat/: models.py  router.py  service.py
backend/app/core/: config.py  errors.py  logging.py  metrics.py  middleware.py  pipeline.py
backend/app/db/: bootstrap.py  dependencies.py  schema.py  session.py
backend/app/documents/: router.py  service.py
backend/app/evaluation/: metrics.py
backend/app/generation/: groq.py  models.py  prompt.py  streaming.py
backend/app/hallucination/: __init__.py  models.py  scoring.py
backend/app/observability/: metrics.py
backend/app/platform/: __init__.py  demo_identity_bootstrap.py  keycloak_admin.py  router.py  service.py
backend/app/rbac/: policies.py
backend/app/reranking/: service.py
backend/app/retrieval/: chunking.py  context.py  dense.py  embeddings.py  fusion.py  hash_embeddings.py  (+5 more)
backend/enterprise_rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: evaluation_dataset.json  test_bootstrap.py  test_chat_rate_limit.py  test_data_layer.py  test_deployment_artifacts.py  test_generation_engine.py  test_hallucination_system.py  test_observability.py  test_phase9_validation.py  test_retrieval_infrastructure.py  test_retrieval_intelligence.py
(+150 files in other folders)
