[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-backend"
version = "0.1.0"
description = "Enterprise RAG backend modular monolith"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "structlog>=24.2,<25.0",
  "prometheus-client>=0.20,<1.0",
  "PyJWT[crypto]>=2.8,<3.0",
  "httpx>=0.27,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "redis>=5.0,<6.0",
  "rank-bm25>=0.2.2,<1.0",
  "qdrant-client>=1.9,<2.0",
  "python-multipart>=0.0.12,<1.0",
  "pypdf>=5.1,<6.0",
  "python-docx>=1.1,<2.0",
  "sentence-transformers>=3.0,<4.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
